[package]
name = "bevy_remote_inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1" }
egui = { version = "0.29", default-features = false }
eframe = { version = "0.29",  default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
ehttp = { version = "0.5"}
jsonrpc-types = {version = "0.3.3"}
serde_json = "1.0.133"
bevy = { version = "0.15", default-features = false, features = ["bevy_remote"] }
anyhow = "1.0"
